Fix docker compose & added migration

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ asyncpg==0.30.0
 SQLAlchemy==2.0.44
 pydantic==2.12.4
 uvicorn==0.38.0
+alembic~=1.13.2
 
 fastapi-users==15.0.1
 fastapi-users-db-sqlalchemy==7.0.0
