--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -6,6 +6,8 @@ python_functions = test_*
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
 
+pythonpath = .
+
 # Coverage settings
 addopts = 
     -v
