--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,26 @@ services:
     env_file:
       - ${DB_ENV_FILE}
     <<: *logging
+
+
+  test_db:
+    image: postgres:16-alpine
+    container_name: test_taskmanager_db
+    environment:
+      POSTGRES_DB: test_taskmanager
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_password
+    ports:
+      - "5433:5432"
+    volumes:
+      - test_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U test_user -d test_taskmanager"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    profiles:
+      - test_db
+
+volumes:
+  test_db_data:
